# Caloric

./: .gitignore  README.md  paper.tex  pyproject.toml  retrain.py  scrapbook.md  test_cosine_schedule.py  test_idle_sleep.py  verify_constraint_field.py
configs/: cosine.yaml  default.yaml
docs/: paper.tex
scripts/: animate.py  compare_schedules.py  debug_trajectory.py  generate.py  train.py  visualise.py
src/: __init__.py  constraint_field.py  formation.py  thermodynamics.py  training.py  utils.py  verify_thermo.py
